# kmk_firmware

./: firmware.uf2  keymap.py  kle.json  pyproject.toml
boards/keebio/bfo_9000/: README.md  kb.py  main.py
boards/keebio/iris/: main.py
util/: kle_to_keymap.py
